# Engine

./: .appveyor.yml  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  engine.bat  engine.py  engine.sh  make_vs2015_win64.bat  make_vs2017_win64.bat  sonar-project.properties
apps/app_common/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  common.h  dll.h  forward_pipeline.cpp  forward_pipeline.h  imgui_pipeline.cpp  imgui_pipeline.h  render_packets.cpp  render_packets.h  shadow_pipeline.cpp  shadow_pipeline.h  simplygon.h  test_shared.h  texture_compressor.cpp  texture_compressor.h
apps/geom_compression/: CMakeLists.txt  compressed_model.cpp  compressed_model.h  test_entry.cpp
apps/testbed/: CMakeLists.txt  clustered_model.cpp  clustered_model.h  common.h  compressed_model.cpp  compressed_model.h  forward_pipeline.cpp  forward_pipeline.h  imgui_pipeline.cpp  imgui_pipeline.h  model_compression_stats.txt  render_packets.cpp  render_packets.h  shadow_pipeline.cpp  shadow_pipeline.h  test_entry.cpp  test_shared.h  texture_compressor.cpp  texture_compressor.h
src/: CMakeLists.txt  _clang-format
src/client/: CMakeLists.txt  client.h  dll.h  input_provider.h  key_input.h  manager.h  window.h
src/client/private/: client.cpp  client_impl.h  manager.cpp  manager_impl.h  window.cpp  window_impl.h
src/client/tests/: test_entry.cpp  window_tests.cpp
src/core/: CMakeLists.txt  allocator.h  allocator_overrides.h  allocator_proxy_thread_safe.h  allocator_proxy_tracker.h  allocator_tlsf.h  allocator_virtual.h  array.h  array_view.h  circular_allocator.h  command_line.h  concurrency.h  debug.h  dll.h  enum.h  external_allocator.h  file.h  file_impl.h  float.h  function.h  half.h  handle.h  hash.h  library.h  linear_allocator.h  map.h  misc.h  mpmc_bounded_queue.h  os.h  pair.h  portability.h  random.h  registry.h  set.h  string.h  timer.h  type_conversion.h  types.h  uuid.cpp  uuid.h  (+1 more)
src/core/private/: allocator.cpp  allocator_proxy_thread_safe.cpp  allocator_proxy_tracker.cpp  allocator_tlsf.cpp  allocator_virtual.cpp  circular_allocator.cpp  command_line.cpp  concurrency.cpp  concurrency.inl  debug.cpp  enum.cpp  external_allocator.cpp  external_allocator.inl  file.cpp  file.cpp~RFaacb770.TMP  float.cpp  half.cpp  handle.cpp  hash.cpp  library.cpp  linear_allocator.cpp  memory.cpp  misc.cpp  misc.inl  random.cpp  registry.cpp  string.cpp  test.cpp  timer.cpp  type_conversion.cpp  uuid.cpp
src/core/tests/: allocator_tests.cpp  array_tests.cpp  concurrency_tests.cpp  file_tests.cpp  function_tests.cpp  handle_tests.cpp  map_tests.cpp  string_tests.cpp  test_entry.cpp  type_conversion_tests.cpp  uuid_tests.cpp  vector_tests.cpp
src/ecs/: CMakeLists.txt  dll.h  system.h
src/ecs/private/: system.cpp
src/gpu/: CMakeLists.txt  backend.h  binding_sets.h  command_list.h  commands.h  dll.h  enum.h  format.h  fwd_decls.h  manager.h  plugin.h  render_state.h  resources.h  sampler_state.h  types.h  utils.h
src/gpu/d3d12/: d3d12backend.h
src/gpu/private/: backend.h  command_list.cpp  command_list.inl  enum.cpp  format.cpp  interface.h  manager.cpp  resources.cpp  resources.inl  utils.cpp
src/gpu/tests/: command_list_tests.cpp  gpu_tests.cpp  test_entry.cpp  transfer_tests.cpp
src/gpu_d3d12/: CMakeLists.txt  d3d12_backend.h  d3d12_command_list.h  d3d12_compile_context.h  d3d12_descriptor_heap_allocator.h  d3d12_device.h  d3d12_linear_descriptor_allocator.h  d3d12_linear_heap_allocator.h  d3d12_resources.h  d3d12_types.h  d3d12backend.h  d3d12commandlist.h  d3d12device.h  d3d12linearheapallocator.h  d3d12resources.h  d3d12types.h  dll.h
src/gpu_d3d12/private/: d3d12_backend.cpp  d3d12_command_list.cpp  d3d12_compile_context.cpp  d3d12_descriptor_heap_allocator.cpp  d3d12_device.cpp  d3d12_device.cpp~RFaacbc14.TMP  d3d12_linear_descriptor_allocator.cpp  d3d12_linear_heap_allocator.cpp  d3d12_types.cpp  d3d12backend.cpp  d3d12commandlist.cpp  d3d12device.cpp  d3d12linearheapallocator.cpp  d3d12types.cpp
src/graphics/: CMakeLists.txt  dll.h  factory.h  fwd_decls.h  material.h  model.h  pipeline.h  render_graph.h  render_pass.h  render_resources.h  shader.h  texture.h  texture_file_data.h  virtual_texture.h
src/graphics/converters/: converter_material.cpp  converter_model.cpp  converter_shader.cpp  converter_texture.cpp  dds.cpp  dds.h  image.cpp  image.h  import_material.h  import_model.h  import_shader.h  import_texture.h  shader_ast.cpp  shader_ast.h  shader_backend_hlsl.cpp  shader_backend_hlsl.h  shader_backend_metadata.cpp  shader_backend_metadata.h  shader_compiler_hlsl.cpp  shader_compiler_hlsl.h  shader_parser.cpp  shader_parser.h  shader_preprocessor.cpp  shader_preprocessor.h
src/graphics/ispc/: .gitignore  image_processing.ispc  image_processing_ispc.h
src/graphics/pipelines/: pipeline_test.cpp
src/graphics/private/: factory.cpp  material.cpp  material_impl.h  model.cpp  model_impl.h  pipeline.cpp  render_graph.cpp  render_pass.cpp  render_pass_impl.h  render_resources.cpp  shader.cpp  shader_impl.h  texture.cpp  texture_impl.h  virtual_texture.cpp  virtual_texture_impl.h
src/graphics/tests/: converter_tests.cpp  model_tests.cpp  render_graph_tests.cpp  shader_parser_tests.cpp  shader_tests.cpp  test_entry.cpp  test_shared.h  virtual_texture_tests.cpp
src/image/: CMakeLists.txt  codec.h  color.h  dll.h  image.h  load.h  process.h  save.h  types.h
src/image/ispc/: image_processing.ispc  ispc_texcomp_kernel.ispc
src/image/private/: codec.cpp  color.cpp  dds.cpp  dds.h  image.cpp  load.cpp  (+2 more)
src/imgui/: CMakeLists.txt  dll.h  imgui.h  manager.h
src/job/: CMakeLists.txt  basic_job.h  concurrency.h  dll.h  function_job.h  manager.h  task.h  types.h
src/math/: CMakeLists.txt  aabb.h  dll.h  float.h  interpolation.h  mat33.h  mat44.h  plane.h  quat.h  utils.h  vec2.h  vec3.h  vec4.h
src/plugin/: CMakeLists.txt  dll.h  manager.h  plugin.h
src/resource/: CMakeLists.txt  converter.cpp  converter.h  data_cache.h  dll.h  factory.h  loader.h  manager.h  ref.h  resource.h  types.h
src/serialization/: CMakeLists.txt  dll.h  serializer.h
(+346 files in other folders)
