ADD_SUBDIRECTORY("core")
ADD_SUBDIRECTORY("client")
ADD_SUBDIRECTORY("gpu")
ADD_SUBDIRECTORY("gpu_d3d12")
ADD_SUBDIRECTORY("graphics")
ADD_SUBDIRECTORY("image")
ADD_SUBDIRECTORY("imgui")
ADD_SUBDIRECTORY("job")
ADD_SUBDIRECTORY("math")
ADD_SUBDIRECTORY("plugin")
ADD_SUBDIRECTORY("resource")
ADD_SUBDIRECTORY("serialization")
